<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dicoding_event"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/upcoming_events"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcomingRV"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming" />

    <TextView
        android:id="@+id/finished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/finished_events"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/upcomingRV"
        app:layout_constraintTop_toBottomOf="@+id/upcomingRV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finishedRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finished" />

    <ProgressBar
        android:id="@+id/upComingLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/upcomingRV"
        app:layout_constraintEnd_toEndOf="@+id/upcomingRV"
        app:layout_constraintStart_toStartOf="@+id/upcomingRV"
        app:layout_constraintTop_toTopOf="@+id/upcomingRV" />

    <ProgressBar
        android:id="@+id/finishedLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/finishedRV"
        app:layout_constraintEnd_toEndOf="@+id/finishedRV"
        app:layout_constraintStart_toStartOf="@+id/finishedRV"
        app:layout_constraintTop_toBottomOf="@+id/finished" />

    <TextView
        android:id="@+id/noUpcomingEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_upcoming_event_tersedia"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/upcomingRV"
        app:layout_constraintEnd_toEndOf="@+id/upcomingRV"
        app:layout_constraintStart_toStartOf="@+id/upcomingRV"
        app:layout_constraintTop_toBottomOf="@+id/upcoming" />

    <TextView
        android:id="@+id/noFinishedEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_past_event_tersedia"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/finishedRV"
        app:layout_constraintEnd_toEndOf="@+id/finishedRV"
        app:layout_constraintStart_toStartOf="@+id/finishedRV"
        app:layout_constraintTop_toBottomOf="@+id/finished" />
</androidx.constraintlayout.widget.ConstraintLayout>