<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dicoding_event"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/recommendation_event_for_you"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcomingEvent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />

    <ProgressBar
        android:id="@+id/upcomingLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/upcomingEvent"
        app:layout_constraintEnd_toEndOf="@+id/upcomingEvent"
        app:layout_constraintStart_toStartOf="@+id/upcomingEvent"
        app:layout_constraintTop_toTopOf="@+id/upcomingEvent" />

    <TextView
        android:id="@+id/noUpComingEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_ada_upcoming_event"
        app:layout_constraintBottom_toBottomOf="@+id/upcomingEvent"
        app:layout_constraintEnd_toEndOf="@+id/upcomingEvent"
        app:layout_constraintStart_toStartOf="@+id/upcomingEvent"
        app:layout_constraintTop_toTopOf="@+id/upcomingEvent" />
</androidx.constraintlayout.widget.ConstraintLayout>